--- a/README
+++ b/README
@@ -1,12 +1,19 @@
 cassandra-c-client
 ==================
-A very basic C client for Cassandra. Note that this code should be taken as a "proof of concept"; it is likely to be unstable, and it comes nowhere close to using all of the power / features of Cassandra. It was originally created to perform a basic performance comparison of Cassandra with some other key-value stores. Others may find this useful for ...
+A very basic C client for Cassandra. Note that this code should be taken as a "proof of concept"; it is likely to be unstable, and it comes nowhere close to using all of the power / features of Cassandra. It was originally created to perform a basic performance comparison of Cassandra with some other key-value stores written in C.
 
-Also, please note that I am not a guru and I realize that my Makefiles, coding style, etc. could probably use improvement.
+Apologies in advance for the sometimes-poor structure and style of the Makefile and code.
 
 
 Instructions to use:
 ====================
 The Cassandra C Client relies on the Apache Thrift framework. Thrift is the interface/transport used by Cassandra to communicate with clients. For more information, see:
 	http://wiki.apache.org/cassandra/ClientOptions
+
+
+Credits:
+========
+This code was primarily authored by Peter Hornyack at the University of Washington (pjh@cs.washington.edu), with some contributions by Katelin Bailey. It is released into the public domain using the Creative Commons CC0 license (http://creativecommons.org/about/cc0); see the COPYING file for the text of the license.
+
+Cassandra and other software packages are copyright/trademark of their various owners.
 
